feat: adicionando arquitetura do projeto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<p-button label="Submit" size="small"/>
-<p-button label="Primary" [text]="true" />
-<p-button label="Primary" [outlined]="true" />
-<p-button icon="pi pi-check" [rounded]="true" />
+<div>
+  <router-outlet></router-outlet>
+</div>
