feat: criando componente, estilo e logica login

--- a/src/app/core/scss/variables.scss
+++ b/src/app/core/scss/variables.scss
@@ -1,3 +1,11 @@
+//cores
+
+$white: #fcfcfc;
+$other-white: #fff;
+$black: #100701;
+$error-color: #ff5757;
+
+
 $border-radius: 10px;
 
 //font-size
