--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -6,7 +6,7 @@
     <div class="container-login__login"> 
         <div class="form">
             <img src="{{ logo }}" alt="Logo" class="img-logo"/>
-            <h3 class="form__title">Bem-vindo</h3>
+            <h3 class="form__title">Seja bem-vindo</h3>
             <p class="form__subtitle">Por favor, entre com seus dados de acesso.</p>
             <form [formGroup]="formLogIn">
                 <div class="container-input">
