feat: criando componente reutilizavel botao voltar

--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -4,6 +4,7 @@
     <img class="bg-login" src="{{ image }}" alt="Imagem de uma xícara cheia de café" />
   </div>
   <div class="container-login__login">
+    <app-back-button></app-back-button>
     <div class="form">
       <img src="{{ logo }}" alt="Logo" class="img-logo" />
       <p class="form__subtitle">Registre-se e encontre a cafeteria perfeita para você</p>
