--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -3,11 +3,14 @@
     <img class="logo-light" src="{{ logoLight }}" alt="Logo do sistema" />
     <img class="bg-login" src="{{ image }}" alt="Imagem de uma xícara cheia de café" />
   </div>
+
   <div class="container-login__login">
     <app-back-button></app-back-button>
+
     <div class="form">
       <img src="{{ logo }}" alt="Logo" class="img-logo" />
       <p class="form__subtitle">Registre-se e encontre a cafeteria perfeita para você</p>
+
       <form [formGroup]="form">
         <div class="container-input">
           <span class="p-float-label input">
@@ -18,79 +21,91 @@
               id="email"
               formControlName="email"
               placeholder="seuemail@email.com"
-              />
-              <label for="email">E-mail</label>
-            </span>
-            @if (form.touched && form.get('email')?.invalid) {
-              <div class="invalid-feedback">
-                @if (form.get('email')?.errors?.['required']) {
-                  <span>E-mail é um campo obrigatório.</span>
-                }
-                @if (form.get('email')?.errors?.['email']) {
-                  <span>E-mail Inválido.</span>
-                }
-              </div>
-            }
-          </div>
+            />
+            <label for="email">E-mail</label>
+          </span>
 
-          <div class="container-input">
-            <span class="p-float-label p-input-icon-right input">
-              <i
-                [class]="hide ? 'pi pi-eye-slash' : 'pi pi-eye'"
-              (click)="showHidePassword()"></i>
-              <input
-                [ngClass]="{ 'ng-invalid ng-dirty': form.touched && form.get('password')?.invalid }"
-                type="text"
-                pInputText
-                formControlName="password"
-                [type]="hide ? 'password' : 'text'"
-                />
-                <label for="password">Senha</label>
-              </span>
-              @if (form.touched && form.get('password')?.invalid) {
-                <div class="invalid-feedback">
-                  @if (form.get('password')?.errors?.['required']) {
-                    <span>Senha é um campo obrigatório.</span>
-                  }
-                </div>
+          @if (form.touched && form.get('email')?.invalid) {
+            <div class="invalid-feedback">
+              @if (form.get('email')?.errors?.['required']) {
+                <span>E-mail é um campo obrigatório.</span>
+              }
+              @if (form.get('email')?.errors?.['email']) {
+                <span>E-mail Inválido.</span>
               }
             </div>
-
-            <div class="container-input">
-              <span class="p-float-label p-input-icon-right input">
-                <i
-                  [class]="hideConfirm ? 'pi pi-eye-slash' : 'pi pi-eye'"
-                (click)="showHideConfirmPassword()"></i>
-                <input
-                  [ngClass]="{ 'ng-invalid ng-dirty': form.touched && form.get('confirmPassword')?.invalid }"
-                  type="text"
-                  pInputText
-                  formControlName="confirmPassword"
-                  (keyup.enter)="form.valid ? doRegister() : ''"
-                  [type]="hideConfirm ? 'password' : 'text'"
-                  />
-                  <label for="confirmPassword">Confirmação de senha</label>
-                </span>
-                @if (form.touched && form.get('confirmPassword')?.invalid) {
-                  <div class="invalid-feedback">
-                    @if (form.get('confirmPassword')?.hasError('invalidPassword')) {
-                      <span>Senhas não são iguais.</span>
-                    }
-                  </div>
-                }
-              </div>
-
-              @if (errorMessage) {
-                <p class="invalid-feedback">{{ errorMessage }}</p>
-              }
-
-              <p-button
-                size="small"
-                label="Registrar"
-                (click)="doRegister()"
-                [disabled]="!form.valid">
-              </p-button>
-            </form>
-          </div>
+          }
         </div>
-      </div>
+
+        <div class="container-input">
+          <span class="p-float-label p-input-icon-right input">
+            <i
+              [class]="hide ? 'pi pi-eye-slash' : 'pi pi-eye'"
+              (click)="showHidePassword()"
+            ></i>
+            <input
+              [ngClass]="{ 'ng-invalid ng-dirty': form.touched && form.get('password')?.invalid }"
+              type="text"
+              pInputText
+              formControlName="password"
+              [type]="hide ? 'password' : 'text'"
+            />
+            <label for="password">Senha</label>
+          </span>
+
+          @if (form.touched && form.get('password')?.invalid) {
+            <div class="invalid-feedback">
+              @if (form.get('password')?.errors?.['required']) {
+                <span>Senha é um campo obrigatório.</span>
+              }
+            </div>
+          }
+
+        </div>
+
+        <div class="container-input">
+          <span class="p-float-label p-input-icon-right input">
+            <i
+              [class]="hideConfirm ? 'pi pi-eye-slash' : 'pi pi-eye'"
+              (click)="showHideConfirmPassword()"
+            ></i>
+            <input
+              [ngClass]="{ 'ng-invalid ng-dirty': form.touched && form.get('confirmPassword')?.invalid }"
+              type="text"
+              pInputText
+              formControlName="confirmPassword"
+              (keyup.enter)="form.valid ? doRegister() : ''"
+              [type]="hideConfirm ? 'password' : 'text'"
+            />
+            <label for="confirmPassword">Confirmação de senha</label>
+          </span>
+
+          @if (form.touched && form.get('confirmPassword')?.invalid) {
+            <div class="invalid-feedback">
+              @if (form.get('confirmPassword')?.hasError('invalidPassword')) {
+                <span>Senhas não são iguais.</span>
+              }
+            </div>
+          }
+        </div>
+
+        <app-password-validator 
+          [form]="form" 
+          passwordField="password" 
+          confirmPasswordField="confirmPassword">
+        </app-password-validator>
+      
+        @if (errorMessage) {
+          <p class="invalid-feedback">{{ errorMessage }}</p>
+        }
+
+        <p-button
+          size="small"
+          label="Registrar"
+          (click)="doRegister()"
+          [disabled]="!form.valid"
+        ></p-button>
+      </form>
+    </div>
+  </div>
+</div>
