--- a/src/app/features/auth/auth.component.scss
+++ b/src/app/features/auth/auth.component.scss
@@ -105,7 +105,6 @@
 
 .invalid-feedback {
     color: $error-color;
-    font-size: $font-size-extra-small; 
+    font-size: $font-size-small;
     font-weight: $font-weight-bold;
-    margin-top: -45px;
 }
