feat: adicionando toast sucesso-erro

--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -98,6 +98,7 @@
           (click)="doRegister()"
           [disabled]="!form.valid"
         ></p-button>
+        <p-toast />
         
       </form>
     </div>
