--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -1,7 +1,11 @@
 <div class="container-login">
   <div class="container-login__logo">
     <img class="logo-light" src="{{ logoLight }}" alt="Logo do sistema" />
-    <img class="bg-login" src="{{ image }}" alt="Imagem de uma xícara cheia de café" />
+    <img
+      class="bg-login"
+      src="{{ image }}"
+      alt="Imagem de uma xícara cheia de café"
+    />
   </div>
 
   <div class="container-login__login">
@@ -9,13 +13,18 @@
 
     <div class="form">
       <img src="{{ logo }}" alt="Logo" class="img-logo" />
-      <p class="form__subtitle">Registre-se e encontre a cafeteria perfeita para você</p>
+      <p class="form__subtitle">
+        Registre-se e encontre a cafeteria perfeita para você
+      </p>
 
       <form [formGroup]="form">
         <div class="container-input">
           <span class="p-float-label input">
             <input
-              [ngClass]="{ 'ng-invalid ng-dirty': form.touched && form.get('email')?.invalid }"
+              [ngClass]="{
+                'ng-invalid ng-dirty':
+                  form.touched && form.get('email')?.invalid
+              }"
               type="text"
               pInputText
               id="email"
@@ -26,14 +35,13 @@
           </span>
 
           @if (form.touched && form.get('email')?.invalid) {
-            <div class="invalid-feedback">
-              @if (form.get('email')?.errors?.['required']) {
-                <span>E-mail é um campo obrigatório.</span>
-              }
-              @if (form.get('email')?.errors?.['email']) {
-                <span>E-mail Inválido.</span>
-              }
-            </div>
+          <div class="invalid-feedback">
+            @if (form.get('email')?.errors?.['required']) {
+            <span>E-mail é um campo obrigatório.</span>
+            } @if (form.get('email')?.errors?.['email']) {
+            <span>E-mail Inválido.</span>
+            }
+          </div>
           }
         </div>
 
@@ -44,7 +52,10 @@
               (click)="showHidePassword()"
             ></i>
             <input
-              [ngClass]="{ 'ng-invalid ng-dirty': form.touched && form.get('password')?.invalid }"
+              [ngClass]="{
+                'ng-invalid ng-dirty':
+                  form.touched && form.get('password')?.invalid
+              }"
               type="text"
               pInputText
               formControlName="password"
@@ -54,13 +65,12 @@
           </span>
 
           @if (form.touched && form.get('password')?.invalid) {
-            <div class="invalid-feedback">
-              @if (form.get('password')?.errors?.['required']) {
-                <span>Senha é um campo obrigatório.</span>
-              }
-            </div>
+          <div class="invalid-feedback">
+            @if (form.get('password')?.errors?.['required']) {
+            <span>Senha é um campo obrigatório.</span>
+            }
+          </div>
           }
-
         </div>
 
         <div class="container-input">
@@ -70,7 +80,10 @@
               (click)="showHideConfirmPassword()"
             ></i>
             <input
-              [ngClass]="{ 'ng-invalid ng-dirty': form.touched && form.get('confirmPassword')?.invalid }"
+              [ngClass]="{
+                'ng-invalid ng-dirty':
+                  form.touched && form.get('confirmPassword')?.invalid
+              }"
               type="text"
               pInputText
               formControlName="confirmPassword"
@@ -79,27 +92,27 @@
             />
             <label for="confirmPassword">Confirmação de senha</label>
           </span>
-
         </div>
 
-        <app-password-validator 
-          [form]="form" 
-          passwordField="password" 
-          confirmPasswordField="confirmPassword">
+        <app-password-validator
+          [form]="form"
+          passwordField="password"
+          confirmPasswordField="confirmPassword"
+        >
         </app-password-validator>
-      
+
         @if (errorMessage) {
-          <p class="invalid-feedback">{{ errorMessage }}</p>
+        <p class="invalid-feedback">{{ errorMessage }}</p>
         }
 
         <p-button
           size="small"
           label="Registrar"
           (click)="doRegister()"
+          [loading]="isLoading"
           [disabled]="!form.valid"
         ></p-button>
         <p-toast />
-        
       </form>
     </div>
   </div>
