Feat/integracao back front login (#4)
* feat: conectando registro com o back-end

* fix: corrigindo altura mensagem de erro

* feat: adicionando validacao de senha

* style: ajustando scss validacao senha

* feat: adicionando toast sucesso-erro

* feat: terminando de conectar login back-end com front-end

--- a/src/app/features/auth/auth.component.scss
+++ b/src/app/features/auth/auth.component.scss
@@ -105,7 +105,6 @@
 
 .invalid-feedback {
     color: $error-color;
-    font-size: $font-size-tiny; 
+    font-size: $font-size-small;
     font-weight: $font-weight-bold;
-    margin-top: 5px;
 }
