--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -8,17 +8,11 @@
 .header {
   align-items: center;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   height: 65px;
   position: fixed;
   width: 100%;
   z-index: 2;
-  &__img {
-    margin: 0 0 0 20px;
-    img {
-      width: 50px;
-    }
-  }
 
   &__nav {
     ul {
@@ -34,6 +28,7 @@
         transition: 0.5s;
 
         &:hover {
+          border-bottom: 2px solid var(--primary-400);
           color: var(--primary-400);
           transition: 0.5s;
         }
