--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,9 +13,9 @@
       </li>
       }
       <li>
-        <button class="header__nav_btn-sign-out" (click)="signOut()">
+        <a class="header__nav_btn-sign-out" (click)="signOut()">
           sair
-        </button>
+        </a>
       </li>
     </ul>
   </nav>
