--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -20,9 +20,10 @@
       display: flex;
       margin: 0;
 
-      li a {
+      li a,
+      &_btn-sign-out {
         color: var(--primary-color);
-        font-size: $font-size-small;
+        font-size: $font-size-normal;
         font-weight: $font-weight-bold;
         margin: 0 7px;
         transition: 0.5s;
@@ -32,15 +33,6 @@
           color: var(--primary-400);
           transition: 0.5s;
         }
-      }
-    }
-
-    &_btn-sign-out {
-      background-color: transparent;
-      border: none;
-      margin: 0 10px;
-      i {
-        color: var(--primary-color);
       }
     }
   }
