--- a/src/app/shared/navbar-mobile/navbar-mobile.component.scss
+++ b/src/app/shared/navbar-mobile/navbar-mobile.component.scss
@@ -92,16 +92,7 @@
       width: 40px;
     }
   }
-  .logo-text {
-    margin-left: 10px;
-    h1 {
-      color: $white;
-      font-size: $font-size-large;
-      width: 140px;
-      margin: 0;
-      white-space: nowrap;
-    }
-  }
+
   .close-side-nav {
     display: flex;
     flex-direction: column;
@@ -158,7 +149,7 @@
       }
 
       .sidenav-link-text {
-        font-size: $font-size-small;
+        font-size: $font-size-normal;
         margin-left: 15px;
         white-space: nowrap;
       }
@@ -211,7 +202,7 @@
         display: flex;
         align-items: center;
         flex-wrap: nowrap;
-        font-size: $font-size-small;
+        font-size: $font-size-normal;
         align-items: flex-start;
         white-space: nowrap;
         &__icon {
