fix: corrigindo header e adicionando validação caso expire o token

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -19,6 +19,7 @@
       align-items: center;
       display: flex;
       margin: 0;
+      margin-right: 15px;
 
       li a,
       &_btn-sign-out {
