--- a/src/app/core/scss/variables.scss
+++ b/src/app/core/scss/variables.scss
@@ -5,6 +5,7 @@ $other-white: #fff;
 $black: #100701;
 $error-color: #ff5757;
 $success-color: #22c55e;
+$primary-color-transparent: rgba(218, 209, 200, 0.3);
 
 
 $border-radius: 10px;
