--- a/src/app/features/coffe-shop/coffe-shop.component.html
+++ b/src/app/features/coffe-shop/coffe-shop.component.html
@@ -1,2 +1,8 @@
-<p>list-coffe-shop works!</p>
-<app-list></app-list>
+<main class="container-list">
+    <header class="container-list__header">
+        <h1>Encontre o melhor café para o melhor momento</h1>
+        <img [src]="bgList" alt="Grãos de café" >
+    </header>
+    <!-- <app-filter></app-filter> -->
+    <app-list></app-list>
+</main>
