feat: adiciionando loading

--- a/src/app/core/scss/product-tags.scss
+++ b/src/app/core/scss/product-tags.scss
@@ -2,7 +2,7 @@
     background-color: #a8d5ba;
     border-radius: 7px;
     color: #2d572c;
-    padding: 0 5px;
+    padding: 5px;
     width: fit-content;
 }
 
@@ -10,7 +10,7 @@
     background-color: #d3e8a5;
     border-radius: 7px;
     color: #5b7f24;
-    padding: 0 5px;
+    padding: 5px;
     width: fit-content;
 }
 
@@ -18,7 +18,7 @@
     background-color: #ffe5b4;
     border-radius: 7px;
     color: #a64b00;
-    padding: 0 5px;
+    padding: 5px;
     width: fit-content;
 }
 
@@ -26,7 +26,7 @@
     background-color: #cce7f0;
     border-radius: 7px;
     color: #004d73;
-    padding: 0 5px;
+    padding: 5px;
     width: fit-content;
 }
 
@@ -34,7 +34,7 @@
     background-color: #dfe7f2;
     border-radius: 7px;
     color: #1c2a3f;
-    padding: 0 5px;
+    padding: 5px;
     width: fit-content;
 }
 
@@ -42,7 +42,7 @@
     background-color: #f9d4d4;
     border-radius: 7px;
     color: #852222;
-    padding: 0 5px;
+    padding: 5px;
     width: fit-content;
 }
 
@@ -50,7 +50,7 @@
     background-color: #d4f5e1;
     border-radius: 7px;
     color: #006d3c;
-    padding: 0 5px;
+    padding: 5px;
     width: fit-content;
 }
 
@@ -58,7 +58,7 @@
     background-color: #fce4f7;
     border-radius: 7px;
     color: #870056;
-    padding: 0 5px;
+    padding: 5px;
     width: fit-content;
 }
 
