--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,15 @@
 <ng-container>
   <app-progress-loader></app-progress-loader>
+  @if(isUserAuthenticated()){
+    <app-header></app-header>
+  }
 </ng-container>
-<div>
+<div
+  [ngClass]="{
+    'main-auth': isUserAuthenticated(),
+    'main-not-auth': !isUserAuthenticated(),
+    'is-mobile': mdq.matches
+  }"
+>
   <router-outlet></router-outlet>
 </div>
