feat: adicionando tipos de cafes

--- a/src/app/core/scss/variables.scss
+++ b/src/app/core/scss/variables.scss
@@ -6,6 +6,7 @@ $black: #100701;
 $error-color: #ff5757;
 $success-color: #22c55e;
 $primary-color-transparent: rgba(218, 209, 200, 0.3);
+$primary-dark-color-transparent: rgba(38, 19, 8, 0.24);
 
 
 $border-radius: 10px;
