feat: criando estrutura avaliacoes

--- a/src/app/features/coffe-shop/_components/detail/detail.component.html
+++ b/src/app/features/coffe-shop/_components/detail/detail.component.html
@@ -66,4 +66,8 @@
             }
         </div>
     }
+    @if(coffeShopDetail.rating){
+        <app-list-rating [rating]="coffeShopDetail.rating"></app-list-rating>
+    }
+
 </section>
