--- a/src/app/features/coffe-shop/_components/detail/detail.component.scss
+++ b/src/app/features/coffe-shop/_components/detail/detail.component.scss
@@ -47,11 +47,10 @@
             border-radius: 15px;
             display: flex;
             flex-direction: column;
+            justify-content: center;
             height: 300px;
             margin: 15px;
             width: 300px;
-
-            img { margin-top: 25px; }
 
             span { 
                 font-size: $font-size-medium;
@@ -94,7 +93,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        margin: 30px 150px 0 100px;
+        margin: 60px 150px 0 100px;
 
         @include tablet {
             justify-content: center;
