--- a/src/app/features/coffe-shop/_components/list-rating/list-rating.component.html
+++ b/src/app/features/coffe-shop/_components/list-rating/list-rating.component.html
@@ -1,1 +1,35 @@
-<p>list-rating works!</p>
+<section class="container-list-rating">
+    <header class="container-list-rating__header">
+        <div class="container-list-rating__header_average">
+            <h2>Avaliações</h2>
+            <p>
+                <span><i class="pi pi-star-fill"></i>{{average}}</span>
+                {{rating.length}} avaliações
+            </p>
+        </div>
+        <p-button size="small" label="Avaliar cafeteria"></p-button>
+    </header>
+
+    @for(item of rating;track item){
+        <div class="container-list-rating__rating" >
+            <figure>
+                <img src="../../../../../assets/images/xicara-de-cafe.png" alt="Imagem de uma xícara de café com um desenho de coração"/>
+            </figure>
+            <div class="container-list-rating__info">
+                <div class="container-list-rating__stars">
+                    <span *ngFor="let _ of createRange(item.stars)">
+                        <i class="pi pi-star-fill"></i>
+                    </span>
+        
+                    <span *ngFor="let _ of createRange(5 - item.stars)">
+                        <i class="pi pi-star"></i>
+                    </span>
+
+                    {{item.date | date:'dd/MM/yyyy' }}
+                </div>
+                <p>{{item.feedback}}</p>
+            </div>
+            
+        </div>
+    }
+</section>
