feat: adicionando opção de adiciionar avaliacao

--- a/src/app/core/scss/theme.scss
+++ b/src/app/core/scss/theme.scss
@@ -4282,7 +4282,7 @@
   .p-dialog .p-dialog-header {
     border-bottom: 0 none;
     background: #ffffff;
-    color: #374151;
+    color: var(--primary-500);
     padding: 1.5rem;
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
@@ -4294,7 +4294,7 @@
   .p-dialog .p-dialog-header .p-dialog-header-icon {
     width: 2rem;
     height: 2rem;
-    color: #6b7280;
+    color: var(--primary-500);
     border: 0 none;
     background: transparent;
     border-radius: 50%;
@@ -4302,7 +4302,7 @@
     margin-right: 0.5rem;
   }
   .p-dialog .p-dialog-header .p-dialog-header-icon:enabled:hover {
-    color: #374151;
+    color: var(--primary-500);
     border-color: transparent;
     background: #f3f4f6;
   }
@@ -4316,7 +4316,7 @@
   }
   .p-dialog .p-dialog-content {
     background: #ffffff;
-    color: #4b5563;
+    color: var(--primary-500);
     padding: 0 1.5rem 2rem 1.5rem;
   }
   .p-dialog .p-dialog-content:last-of-type {
@@ -4326,7 +4326,7 @@
   .p-dialog .p-dialog-footer {
     border-top: 0 none;
     background: #ffffff;
-    color: #4b5563;
+    color: var(--primary-500);
     padding: 0 1.5rem 1.5rem 1.5rem;
     text-align: right;
     border-bottom-right-radius: 6px;
