--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,7 +1,7 @@
 @import "../../core/scss/variables.scss";
 
 .active {
-  border-bottom: 2px dashed var(--primary-color);
+  border-bottom: 2px solid var(--primary-100);
   padding-bottom: 2px;
 }
 
@@ -23,6 +23,7 @@
 
       li a,
       &_btn-sign-out {
+        cursor: pointer;
         color: var(--primary-100);
         font-size: $font-size-normal;
         font-weight: $font-weight-bold;
