fix: ajustando filtro para componente compartilhavel

--- a/src/app/features/maps/maps.component.html
+++ b/src/app/features/maps/maps.component.html
@@ -1,1 +1,3 @@
-<p>maps works!</p>
+<section class="container-map">
+    <app-filter (filtersChanged)="onFiltersChanged($event)"></app-filter>
+</section>
