--- a/src/app/features/maps/maps.component.html
+++ b/src/app/features/maps/maps.component.html
@@ -1,3 +1,8 @@
 <section class="container-map">
     <app-filter (filtersChanged)="onFiltersChanged($event)"></app-filter>
+
+    <div>
+        <h1>Google Maps in Angular 17</h1>
+        <google-map height="600px" width="800px" [options]="options"> </google-map>
+    </div>
 </section>
